// Copyright 2016 Google, Inc. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package hello;

// The hello service definition.
service Hello {
  // Sends a greeting.
  rpc Say (Request) returns (Response);
}

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
}

// The request message containing the user's name.
message Request {
  string name = 1; 
}

// The response message containing the greeting.
message Response {
  string message = 1;	
}

// The login request message containing the username and password.
message LoginRequest {
  string username = 1;
  string password = 2;
}

// The login response message containing the JWT token.
message LoginResponse {
  string token = 1;
}

message User {
  string email = 1;
  string username = 2;
  string passwordHash = 3;
  bool   isAdmin  = 4;
}
